@@ -1,7 +1,17 @@
+2006-02-03  Johan Dahlin  <jdahlin@async.com.br>
+
+	reviewed by: Johan Dahlin  <jdahlin@async.com.br>
+
+	* kiwi/ui/widgets/list.py: Use set_sort_column_id
+	better with column ids. Simplify _on_column__clicked.
+	When switching columns, always set to ascending sorting.
+
 2006-02-01  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/dialogs.py: Really make it follow the HIG.
 	Copied some code from eel-alert-dialog.c
+
+	Import stuff from gazpacho, save, open, BaseDialog
 
 2006-02-01  Patrick K O'Brien <pobrien@orbtech.com>
 
